--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^6.0.0"
+    "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.1"
   }
 }
