--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "json": "^11.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "token": "^0.1.0",
+    "web": "^0.0.2"
   }
 }
